# traj-opt

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
space_traj_opt/: aero_plots.ipynb  cartpole.py  cp_nb.ipynb  jax_dynamics.ipynb  models.py  multi_shoot_cannon.ipynb  plotting.py  rocket_eq_sizing.py  ssto_ascent.ipynb  ssto_moon_collocation.ipynb  ssto_moon_collocation_jax.ipynb  ssto_moon_lts_shooting.ipynb  test_utils.py  transcription.py  two_ascent.ipynb  utils.py
space_traj_opt/examples/: multi_shoot_cannon.ipynb  ssto_moon_collocation.ipynb  ssto_moon_collocation_jax.ipynb  ssto_moon_lts_shooting.ipynb  two_stage_ascent.ipynb
tests/: test_models.py  test_transcription.py
