[tool.poetry]
name = "space-traj-opt"
version = "0.1.0"
description = ""
authors = ["Hassan Arif <hassanarif87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.26.2"
scipy = "^1.11.4"
pandas = "^2.1.4"
plotly = "^5.18.0"
jupyter = "^1.0.0"
pint = "^0.23"
poliastro = "^0.17.0"
sympy = "^1.12"
jax = "^0.4.35"
diffrax = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
