[tool.poetry]
name = "space-traj-opt"
version = "0.1.0"
description = ""
authors = ["Hassan Arif <hassanarif87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^2.0.0"
scipy = "^1.11.4"
pandas = "^2.1.4"
plotly = "^5.18.0"
jupyter = "^1.0.0"
pint = "^0.23"
sympy = "^1.12"
jax = "^0.4.35"
numba = "^0.60.0"
matplotlib = "^3.10.0"
cyipopt = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
snakeviz = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
